[gd_scene load_steps=14 format=3 uid="uid://bbgbtysnt13nu"]

[ext_resource type="Script" path="res://tower.gd" id="1_crrkb"]
[ext_resource type="Texture2D" uid="uid://jmhw6sqyaf5c" path="res://sprites/tower_position_closed.png" id="2_wtoqq"]
[ext_resource type="Texture2D" uid="uid://j7b086ilhlsv" path="res://sprites/test_tower1.png" id="3_1ff3p"]
[ext_resource type="Texture2D" uid="uid://35jwfa8rciff" path="res://sprites/test_tower2.png" id="4_635nw"]
[ext_resource type="Texture2D" uid="uid://cwjf7q71l6oog" path="res://sprites/test_tower3.png" id="5_86x8q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7va4j"]
radius = 58.3571

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jtluc"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n2m2b"]
load_path = "res://.godot/imported/tower_position_open.png-01528d2871fe1761088cd9e7f625721b.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_hssfe"]
radius = 167.199

[sub_resource type="CircleShape2D" id="CircleShape2D_4gild"]
radius = 167.06

[sub_resource type="CircleShape2D" id="CircleShape2D_ckqic"]
radius = 172.37

[sub_resource type="CircleShape2D" id="CircleShape2D_2afkm"]
radius = 1114.66

[sub_resource type="CircleShape2D" id="CircleShape2D_vr60h"]
radius = 1111.11

[node name="Tower_Pos" type="Area2D"]
script = ExtResource("1_crrkb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_7va4j")

[node name="TowerPositionOpen" type="Sprite2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_jtluc")
position = Vector2(0, 5)
scale = Vector2(0.15, 0.15)
texture = SubResource("CompressedTexture2D_n2m2b")

[node name="TowerPositionClosed" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_wtoqq")

[node name="Tower1" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-100, 0)
scale = Vector2(0.15, 0.15)

[node name="TestTower1" type="Sprite2D" parent="Tower1"]
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("3_1ff3p")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower1"]
shape = SubResource("CircleShape2D_hssfe")

[node name="Tower2" type="Area2D" parent="."]
visible = false
position = Vector2(-70, -65)
scale = Vector2(0.15, 0.15)

[node name="TestTower2" type="Sprite2D" parent="Tower2"]
scale = Vector2(0.666667, 0.651042)
texture = ExtResource("4_635nw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tower2"]
shape = SubResource("CircleShape2D_4gild")
one_way_collision_margin = 0.0

[node name="Tower3" type="Area2D" parent="."]
visible = false
position = Vector2(0, -100)
scale = Vector2(0.15, 0.15)

[node name="TestTower3" type="Sprite2D" parent="Tower3"]
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("5_86x8q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower3"]
shape = SubResource("CircleShape2D_ckqic")

[node name="Tower4" type="Area2D" parent="."]
visible = false
position = Vector2(70, -65)
scale = Vector2(0.0225, 0.0225)

[node name="TestTower3" type="Sprite2D" parent="Tower4"]
scale = Vector2(4.32986, 4.32986)
texture = ExtResource("5_86x8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower4"]
shape = SubResource("CircleShape2D_2afkm")

[node name="Tower5" type="Area2D" parent="."]
visible = false
position = Vector2(100, 0)
scale = Vector2(0.0225, 0.0225)

[node name="TestTower2" type="Sprite2D" parent="Tower5"]
scale = Vector2(4.37674, 4.27415)
texture = ExtResource("4_635nw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower5"]
shape = SubResource("CircleShape2D_vr60h")

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
